sumo/tests/sumo/output/vtypeprobe/errors/freq0/errors.sumo
Error: Sampling frequency must not be zero (in vTypeProbe 'test1').
Quitting (on error).
